--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "callback": "node src/callback/index.js",
-    "callback:challenge": "node src/callback/challenge.js"
+    "challenge": "node src/callback/challenge.js"
   },
   "author": "Samuel Gonzalez",
   "license": "ISC",
